  * sysdeps/*.mk: build with -g instead of -g1.  Closes: bug#403270.
  * debhelper.in/libc.install: install gai.conf in /etc.  Closes: #404379.
  * Add patches/any/local-ldconfig-timestamps.diff (use the timestamps to
    update the cache only when needed) by Josselin Mouette.  Closes: #374945.
  * Add patches/hppa/submitted-cfi-procend.diff (fix build with binutils cvs)
    from parisc-linux.

  [ Denis Barbier ]
  * Remove localedata/locale-en_NZ.diff (merged upstream).
  * Remove localedata/locale-nr_ZA.diff (merged upstream).
  * Remove localedata/new-catalan-locales.diff (merged upstream).
  * Remove localedata/update-ZA.diff (merged upstream).
  * Remove localedata/locale-te_IN.diff (merged upstream).
  * Remove locale/iso4217-RON.diff (merged upstream).
  * Update localedata/locales_CH.diff
  * Update localedata/supported.diff
  * Update localedata/locale-hy_AM.diff
  * Update localedata/locale-csb_PL.diff
  * Update localedata/dz_BT-collation.diff
  * Update localedata/locale-ia.diff
  * Update localedata/locales-sr.diff
  * Update localedata/tailor-iso14651_t1.diff
  * Update localedata/fix-lang.diff
  * Update localedata/first_weekday.diff

 -- Aurelien Jarno <aurel32@debian.org>  Mon,  8 Jan 2007 23:28:03 +0100

glibc (2.4-1) UNRELEASED; urgency=low

  * New upstream version 2.4:
    - NPTL is used instead of linuxthreads on alpha.  Closes: #325600.
    - NPTL being the default thread library when available, only one
      version of the thread library is available (either linuxthreads or
      NPTL).  Closes: #399035.
    - .eh_frame has been fixed.  Closes: #349688.
    - Fix a memory leak in getprotobyname. Closes: #365233.
    - Support for MALLOC_PERTURB has been added.  Closes: #350579.
    - Support for 2.4 kernels has been removed.  Closes: #258740.

  [ Clint Adams ]
  * Remove all/cvs-manual-memory.diff (merged upstream).
  * Remove all/cvs-manual-string.diff (merged upstream).
  * Remove any/cvs-divdi3-moddi3.diff (merged upstream).