@@ -21,8 +21,8 @@ debian/tmp-libc/usr/lib/pt_chown usr/lib
 
 debian/local/usr_sbin/tzconfig usr/sbin
 
-debian/tmp-libc/lib/*-*-gnu/ lib
-debian/tmp-libc/usr/lib/*-*-gnu/ usr/lib
+debian/tmp-libc/lib/*-*-gnu*/ lib
+debian/tmp-libc/usr/lib/*-*-gnu*/ usr/lib
 
 debian/tmp-libc/etc/ld.so.conf.d /etc
 build-tree/glibc-2.5/posix/gai.conf /etc
