@@ -1,0 +1,1 @@
+libc_add-ons = ports nptl $(add-ons)
